--- a/quiz-simulation.ipynb
+++ b/quiz-simulation.ipynb
@@ -24,10 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1452 <class 'int'>\n",
+      "11.23 <class 'int'>\n",
+      "(1+2j) <class 'int'>\n",
+      "True <class 'int'>\n",
+      "w3resource <class 'int'>\n",
+      "[5, 12] <class 'int'>\n",
+      "[1 2 3] <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "datalist = [1452, 11.23, 1+2j, True, 'w3resource', [5, 12], np.array([1,2,3])]\n",
+    "\n",
+    "for i in range(0, len(datalist)):\n",
+    "\n",
+    "     print(datalist[i], type(i))\n",
+    "        \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,6 +69,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=0\n",
+    "f1=1\n",
+    "print(f)\n",
+    "print(f1)\n",
+    "for i in range(8):\n",
+    "    F=f1+f\n",
+    "    f=f1\n",
+    "    f1=F\n",
+    "    print(F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib(n):\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    if n == 1:\n",
+    "        print(a)\n",
+    "    else:\n",
+    "        print(a)\n",
+    "        print(b)\n",
+    "        for i in range(2,n):\n",
+    "            c = a + b\n",
+    "            a = b\n",
+    "            b = c\n",
+    "            print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "fib(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -54,9 +168,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 ('multilayer')",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -68,9 +182,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "11838f79d2aaadbfa3a2adfaf35bacdebdb4e8d9b63957ddf298964812544a76"
@@ -78,5 +191,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
